fix: update tab styles, add dark mode styles

--- a/assets/forcal.css
+++ b/assets/forcal.css
@@ -129,7 +129,9 @@ body.modal-open {
     border-bottom: 1px solid #bfe0d8;
 }
 
-.forcal_clangtabs .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+.forcal_clangtabs .nav-tabs > li.active > a,
+.forcal_clangtabs .nav-tabs > li.active > a:hover,
+.forcal_clangtabs .nav-tabs > li.active > a:focus {
     background-color: #f1fcfa;
     border-color: #bfe0d8;
     border-top: 2px solid #3bb594;
@@ -227,7 +229,7 @@ dl + .forcal_clangtabs .nav.nav-tabs,
     content: "\002b";
 }
 
-.forcaldatepicker .form-control {
+.forcaldatepicker.forcal .form-control {
     /*border-radius: 4px;*/
 }
 
@@ -236,11 +238,11 @@ div.daterangepicker_input,
     display: none;
 }
 
-div.daterangepicker {
+div.daterangepicker.forcal {
     margin-top: 10px;
 }
 
-.daterangepicker:before {
+.daterangepicker.forcal:before {
     /*left: 50%;*/
     /*margin-left: -11px;*/
     /*border-top-width: 0;*/
@@ -249,7 +251,7 @@ div.daterangepicker {
     /*top: -11px*/
 }
 
-.daterangepicker:after {
+.daterangepicker.forcal:after {
     /*content: " ";*/
     /*top: 1px;*/
     /*margin-left: -10px;*/
@@ -257,25 +259,26 @@ div.daterangepicker {
     /*border-bottom-color: #fff;*/
 }
 
-div.daterangepicker .cancelBtn {
+div.daterangepicker.forcal .cancelBtn {
     display: none;
 }
 
-.daterangepicker.opensright:before, .daterangepicker.opensright:after {
+.daterangepicker.forcal.opensright:before,
+.daterangepicker.forcal.opensright:after {
     position: absolute;
     display: inline-block;
     border-bottom-color: rgba(0, 0, 0, 0.2);
     content: '';
 }
 
-.daterangepicker.opensright:before {
+.daterangepicker.forcal.opensright:before {
     top: -11px;
     border-right: 11px solid transparent;
     border-left: 11px solid transparent;
     border-bottom: 11px solid #ccc;
 }
 
-.daterangepicker.opensright:after {
+.daterangepicker.forcal.opensright:after {
     top: -10px;
     border-right: 10px solid transparent;
     border-bottom: 10px solid #fff;
